# Shaders

shaders/: CMakeLists.txt  Shader.cpp  Shader.h  Texture.h  buffers.h  data.h  shader.h
shaders/kernels/: kernel.cpp  kernel.h
tests/shader/: CMakeLists.txt
